WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11985
REGRESSION: No day/week scrollbar in Google Calendar
https://bugs.webkit.org/show_bug.cgi?id=11985
Summary
REGRESSION: No day/week scrollbar in Google Calendar
Matt Lilek
Reported
2006-12-26 12:01:19 PST
Load Google Calendar (until
bug 11982
is fixed, you'll need the
r18159
nightly). There are no scrollbars in the day, week, or next 4 days tabs even though the content scrolls with a trackpad/scrollwheel. After switching to the month or agenda tabs and back, the scrollbars are working properly. Scrollbars are fine in shipping Safari.
Attachments
make sure overflow:auto scrollbars are enabled
(1.39 KB, patch)
2007-02-10 12:08 PST
,
Antti Koivisto
mjs
: review-
Details
Formatted Diff
Diff
test case
(400 bytes, text/html)
2007-02-10 17:14 PST
,
Antti Koivisto
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2007-01-28 19:06:37 PST
<
rdar://problem/4960260
>
Antti Koivisto
Comment 2
2007-02-10 12:08:05 PST
Created
attachment 13109
[details]
make sure overflow:auto scrollbars are enabled Google Calendar apparently dynamically turns overflow:scroll scrollbars into overflow:auto. If they were disabled at that point they would never be enabled
Sam Weinig
Comment 3
2007-02-10 15:37:35 PST
Antti, as far as I can tell it looks good, but it needs a test case.
Maciej Stachowiak
Comment 4
2007-02-10 16:19:50 PST
Comment on
attachment 13109
[details]
make sure overflow:auto scrollbars are enabled Fix looks good to me. Just needs a test case for LayoutTests. r- for now, r=me if you add a test case.
Antti Koivisto
Comment 5
2007-02-10 17:14:47 PST
Created
attachment 13112
[details]
test case Interestingly this test case fails also in tiger webkit. Since this bug depends on layout timing Calendar scrollbars probably work there just by accident.
Sam Weinig
Comment 6
2007-02-10 18:05:28 PST
Antti, the test case looks good, now, if you could just bundle it all together. add a Changelog for the LayoutTest and upload it we will be all set.
Antti Koivisto
Comment 7
2007-02-11 16:05:30 PST
Based on
comment #4
committed as
r19566
with the attached LayoutTest
John Sullivan
Comment 8
2007-02-12 09:38:18 PST
This appears only partly fixed. With tip of tree, if I visit Google calendar in day or week mode, no vertical scroller appears. But if I click on the "month" tab, then back on the "day" or "week" tab, the vertical scroller then appears, and works correctly. So there's some initial state that's still wrong.
Antti Koivisto
Comment 9
2007-02-12 10:22:24 PST
Worksforme. Err, are you sure you actually have
r19566
or newer?
Matt Lilek
Comment 10
2007-02-12 10:45:08 PST
This also works for me with
r19573
.
John Sullivan
Comment 11
2007-02-12 10:54:23 PST
Hmm, I definitely have 19573. I'll double-check this.
John Sullivan
Comment 12
2007-02-12 10:58:32 PST
Ah, I was building a Release version, but testing on a Debug version that wasn't quite up to date. When I test on a version that actually includes this fix, it works just fine. D'oh!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug