LayoutTests:

Reviewed by Maciej.

        Test for REGRESSION: No day/week scrollbar in Google Calendar
        http://bugs.webkit.org/show_bug.cgi?id=11985

        * fast/layers/overflow-scroll-auto-switch-expected.checksum: Added.
        * fast/layers/overflow-scroll-auto-switch-expected.png: Added.
        * fast/layers/overflow-scroll-auto-switch-expected.txt: Added.
        * fast/layers/overflow-scroll-auto-switch.html: Added.

WebCore:

        Reviewed by Maciej.

        - fixed REGRESSION: No day/week scrollbar in Google Calendar
        http://bugs.webkit.org/show_bug.cgi?id=11985

        Make sure overflow:auto scrollbars are always enabled. If they were overflow:scroll
        and dynamically changed to auto they might still be disabled.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::updateScrollInfoAfterLayout):



Canonical link: https://commits.webkit.org/16452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19566 268f45cc-cd09-0410-ab3c-d52691b4dbfc